2002-11-21  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-ellipse.c (sp_arc_start_set): Use genericellipse closed marker
	(sp_arc_end_set): Ditto
	(sp_arc_set_elliptical_path_attribute): Ditto

	* autogen.sh: Added '--intl' to gettextize flags, seems to be safe for
	older gettexts as well

	* src/dialogs/xml-tree.c (on_tree_select_row): Remove extra blockade
	counting (thanks to MenTaLguY)
	(on_tree_unselect_row): Ditto

2002-11-20  Masatake YAMATO  <jet@gyve.org>

	* src/seltrans.c (sp_sel_trans_init): Set null to
	stamp_cache.
	(sp_sel_trans_ungrab): Clear stamp_cache.
	(sp_sel_trans_stamp): If available, use stamp_cache.
	Else build stamp_cache. l0 is removed. Don't
	free the list here.

	* src/seltrans.h: Included glib.h.
	(struct _SPSelTrans): added new field stamp_cache.

2002-11-20  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/interface.c (sp_ui_dialog_menu): Do not bring up > 1 transform dialogs at once

	* src/seltrans.c (sp_sel_trans_stamp): Reversing still was not correct,
	replaced it with explicit sort

2002-11-20  Masatake YAMATO  <jet@gyve.org>

	* src/seltrans.c (sp_sel_trans_stamp): The order of
	selections is reversed before stamping.

	The bug was reported by Michel Schinz <Michel.Schinz@epfl.ch>.

2002-11-19  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/desktop.c (sp_desktop_prepare_shutdown): New method, allowing us nice
	cleanup before ::destroy is invoked
	(sp_dtw_desktop_shutdown): Prepare desktop for shutdown

	* src/sp-text.c (sp_text_is_empty): Treat unicode private plane as graphical

	* src/libnrtype/nr-type-ft2.c (nr_typeface_ft2_lookup): Use private plane
	direct index, if no unimap
	(nr_typeface_ft2_new): Set unimap flag according to whether we have
	unicode mapping table or not

2002-11-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in (FREETYPE_LIBS): Added direct freetype check

	* src/widgets/dash-selector.c (sp_dash_selector_menu_item_new): Use created
	GC, as widget is not mapped yet