@@ -1069,7 +1069,7 @@ sp_arc_knot_holder (SPItem *item, SPDesktop *desktop)
 	SPKnotHolder *knot_holder;
 
 	arc = SP_ARC (item);
-	knot_holder = sp_knot_holder_new (desktop, item);
+	knot_holder = sp_knot_holder_new (desktop, item, NULL);
 	
 	sp_knot_holder_add (knot_holder,
 			    sp_arc_start_set,
